--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -36,8 +36,8 @@ $black-color: #000000 !default;
 $rich-purple-color: #8e44ad !default;
 
 $rose-quartz-color: #ffb0e7 !default;
-$rose-quartz-dark-color: #E091C8 !default;
-$sky-blue-color: #7FDBFF !default;
+$rose-quartz-dark-color: #e091c8 !default;
+$sky-blue-color: #7fdbff !default;
 
 $sapphire-light-color: #4c9cfe !default;
 $sapphire-blue-color: #0f4c81 !default;
